Added label sample page. Updated catalog page and screenshot with current status.

--- a/wicket-foundation-samples/src/main/java/com/iluwatar/CatalogPage.html
+++ b/wicket-foundation-samples/src/main/java/com/iluwatar/CatalogPage.html
@@ -11,7 +11,7 @@
 		<h1>Wicket-Foundation Samples Catalog</h1>
 	</div>
     <div class="row">
-      <h3>28/59 pages (47%) implemented (<a href="http://foundation.zurb.com/" target="blank">Foundation 5.4.5</a>)</h3>
+      <h3>29/59 pages (49%) implemented (<a href="http://foundation.zurb.com/" target="blank">Foundation 5.4.5</a>)</h3>
     </div>
 
     <p>
@@ -100,7 +100,7 @@
             <h3>Typography</h3>
             <div class="row">1. <a href="TypePage.html">Type</a></div>
             <div class="row">2. <a href="InlineListsPage.html">Inline Lists</a></div>
-            <div class="row">3. Labels</div>
+            <div class="row">3. <a href="LabelPage.html">Labels</a></div>
             <div class="row">4. Keystrokes</div>
           </wicket:link>
         </div>
