Updated catalog page and screenshot.

--- a/wicket-foundation-samples/src/main/java/com/iluwatar/CatalogPage.html
+++ b/wicket-foundation-samples/src/main/java/com/iluwatar/CatalogPage.html
@@ -11,7 +11,7 @@
 		<h1>Wicket-Foundation Samples Catalog</h1>
 	</div>
     <div class="row">
-      <h3>29/59 pages (49%) implemented (<a href="http://foundation.zurb.com/" target="blank">Foundation 5.4.5</a>)</h3>
+      <h3>32/59 pages (54%) implemented (<a href="http://foundation.zurb.com/" target="blank">Foundation 5.4.5</a>)</h3>
     </div>
 
     <p>
@@ -40,9 +40,9 @@
             <div class="row">3. <a href="GridPage.html">Grid</a></div>
             <div class="row">4. <a href="BlockGridPage.html">Block Grid</a></div>
             <div class="row">5. Interchange Responsive Content</div>
-            <div class="row">6. Utility Classes</div>
-            <div class="row">7. Javascript Utilites</div>
-            <div class="row">8. Right-to-Left Support</div>
+            <div class="row">6. <a href="http://foundation.zurb.com/docs/utility-classes.html">Utility Classes (external)</a></div>
+            <div class="row">7. <a href="http://foundation.zurb.com/docs/javascript-utilities.html">Javascript Utilites (external)</a></div>
+            <div class="row">8. <a href="http://foundation.zurb.com/docs/components/rtl.html">Right-to-Left Support (external)</a></div>
           </wicket:link>
         </div>
         <div class="small-4 columns">
