Work on foundation icons sample page.

--- a/wicket-foundation-samples/src/main/java/com/iluwatar/CatalogPage.html
+++ b/wicket-foundation-samples/src/main/java/com/iluwatar/CatalogPage.html
@@ -142,7 +142,7 @@
           <wicket:link>
             <h3>Extras</h3>
             <div class="row">1. Welcome to Foundation</div> <!-- IndexPage.html -->
-            <div class="row">2. Foundation Icons</div>
+            <div class="row">2. <a href="FoundationIconsPage.html">Foundation Icons</a></div>
           </wicket:link>
         </div>
         <div class="small-4 columns">
