--- a/wicket-foundation-core/src/main/java/com/iluwatar/foundation/icon/FoundationIconAndTextPanel.html
+++ b/wicket-foundation-core/src/main/java/com/iluwatar/foundation/icon/FoundationIconAndTextPanel.html
@@ -6,7 +6,10 @@
 </head>
 <body>
     <wicket:panel>
-        <i wicket:id="icon"></i>
+    	<p>
+        	<i wicket:id="icon"></i>
+        	<wicket:container wicket:id="text"></wicket:container>
+        </p>
     </wicket:panel>
 </body>
 </html>
