--- a/wicket-foundation-samples/src/main/java/com/iluwatar/FoundationIconsPage.html
+++ b/wicket-foundation-samples/src/main/java/com/iluwatar/FoundationIconsPage.html
@@ -8,39 +8,38 @@
     <div class="row">
         <div>
 
-            <h2 class="with-download-link">General Icons</h2>
+            <h2>General Icons</h2>
             <div wicket:id="generalIcons"></div>
-<!--  
-            <h2 class="with-download-link">Page Icons</h2>
+
+            <h2>Page Icons</h2>
             <div wicket:id="pageIcons"></div>
 
-            <h2 class="with-download-link">Arrow Icons</h2>
+            <h2>Arrow Icons</h2>
             <div wicket:id="arrowIcons"></div>
 
-            <h2 class="with-download-link">People Icons</h2>
+            <h2>People Icons</h2>
             <div wicket:id="peopleIcons"></div>
 
-            <h2 class="with-download-link">Device Icons</h2>
+            <h2>Device Icons</h2>
             <div wicket:id="deviceIcons"></div>
 
-            <h2 class="with-download-link">Text Editor Icons</h2>
+            <h2>Text Editor Icons</h2>
             <div wicket:id="textEditorIcons"></div>
 
-            <h2 class="with-download-link">Media Control Icons</h2>
+            <h2>Media Control Icons</h2>
             <div wicket:id="mediaControlIcons"></div>
 
-            <h2 class="with-download-link">Ecommerce Icons</h2>
+            <h2>Ecommerce Icons</h2>
             <div wicket:id="eCommerceIcons"></div>
 
-            <h2 class="with-download-link">Accessibility Icons</h2>
+            <h2>Accessibility Icons</h2>
             <div wicket:id="accessibilityIcons"></div>
 
-            <h2 class="with-download-link">Social &amp; Brand Icons</h2>
+            <h2>Social &amp; Brand Icons</h2>
             <div wicket:id="socialIcons"></div>
 
-            <h2 class="with-download-link">Miscellaneous Icons</h2>
+            <h2>Miscellaneous Icons</h2>
             <div wicket:id="miscIcons"></div>
--->            
         </div>
     </div>
 </body>
