--- a/wicket-foundation-samples/src/main/java/com/iluwatar/CatalogPage.html
+++ b/wicket-foundation-samples/src/main/java/com/iluwatar/CatalogPage.html
@@ -119,7 +119,7 @@
             <h3>Content</h3>
             <div class="row">1. <a href="DropdownsPage.html">Dropdowns</a></div>
             <div class="row">2. Pricing Tables</div>
-            <div class="row">3. Progress Bars</div>
+            <div class="row">3. <a href="ProgressBarPage.html">Progress Bars</a></div>
             <div class="row">4. Tables</div>
             <div class="row">5. Accordion</div>
             <div class="row">6. Tabs</div>
