Added skeleton for side nav sample page.

--- a/wicket-foundation-samples/src/main/java/com/iluwatar/CatalogPage.html
+++ b/wicket-foundation-samples/src/main/java/com/iluwatar/CatalogPage.html
@@ -51,7 +51,7 @@
             <div class="row">1. Offcanvas</div>
             <div class="row">2. <a href="TopBarPage.html">Top Bar</a></div>
             <div class="row">3. <a href="IconBarPage.html">Icon Bar</a></div>
-            <div class="row">4. Side Nav</div>
+            <div class="row">4. <a href="SideNavPage.html">Side Nav</a></div>
             <div class="row">5. Magellan Sticky Nav</div>
             <div class="row">6. Sub Nav</div>
             <div class="row">7. <a href="BreadcrumbsPage.html">Breadcrumbs</a></div>
