--- a/wicket-foundation-samples/src/main/java/com/iluwatar/CatalogPage.html
+++ b/wicket-foundation-samples/src/main/java/com/iluwatar/CatalogPage.html
@@ -53,7 +53,7 @@
             <div class="row">3. <a href="IconBarPage.html">Icon Bar</a></div>
             <div class="row">4. <a href="SideNavPage.html">Side Nav</a></div>
             <div class="row">5. Magellan Sticky Nav</div>
-            <div class="row">6. Sub Nav</div>
+            <div class="row">6. <a href="SubNavPage.html">Sub Nav</a></div>
             <div class="row">7. <a href="BreadcrumbsPage.html">Breadcrumbs</a></div>
             <div class="row">8. Pagination</div>
           </wicket:link>
