--- a/wicket-foundation-samples/src/main/java/com/iluwatar/SplitButtonsPage.html
+++ b/wicket-foundation-samples/src/main/java/com/iluwatar/SplitButtonsPage.html
@@ -28,21 +28,42 @@
 </pre>
 
           <h4>Java</h4>
-<pre><code class="language-html"><div class="code-container">
+<pre><code class="language-html"><div class="code-container">add(new FoundationSplitButton(&quot;basic&quot;, &quot;Split Button&quot;, Arrays.asList(&quot;This is a link&quot;, &quot;This is another&quot;, &quot;Yet another&quot;)) {
+
+	private static final long serialVersionUID = 1L;
+
+	@Override
+	public AbstractLink createButton(String id) {
+		return new Link&lt;Void&gt;(id) {
+
+			private static final long serialVersionUID = 1L;
+
+			@Override
+			public void onClick() {
+			}
+		};
+	}
+
+	@Override
+	public AbstractLink createDropdownLink(String id, int idx) {
+		return new Link&lt;Void&gt;(id) {
+
+			private static final long serialVersionUID = 1L;
+
+			@Override
+			public void onClick() {
+			}
+		};
+	}
+});
 </div></code>
 </pre>
 
 				</div>
 				<div>
 					<h4>Rendered HTML</h4>
-					<a href="#" class="button split">Split Button <span
-						data-dropdown="drop"></span></a><br>
-					<ul id="drop" class="f-dropdown" data-dropdown-content>
-						<li><a href="#">This is a link</a></li>
-						<li><a href="#">This is another</a></li>
-						<li><a href="#">Yet another</a></li>
-					</ul>
-
+	
+					<div wicket:id="basic"></div>
 				</div>
 			</div>
 
@@ -55,26 +76,47 @@
 				<div>
 				
           <h4>HTML</h4>
-<pre><code class="language-html"><div class="code-container"><span class="tag">&lt;<span class="title">div</span> <span class="attribute">wicket:id</span>=<span class="value">&quot;basic&quot;</span>&gt;</span><span class="tag">&lt;/<span class="title">div</span>&gt;</span>
+<pre><code class="language-html"><div class="code-container"><span class="tag">&lt;<span class="title">div</span> <span class="attribute">wicket:id</span>=<span class="value">&quot;advanced&quot;</span>&gt;</span><span class="tag">&lt;/<span class="title">div</span>&gt;</span>
 </div></code>
 </pre>
 
           <h4>Java</h4>
-<pre><code class="language-html"><div class="code-container">
+<pre><code class="language-html"><div class="code-container">SplitButtonOptions options = new SplitButtonOptions(ButtonSize.SMALL).setColor(ButtonColor.ALERT).setRadius(ButtonRadius.ROUND);
+add(new FoundationSplitButton(&quot;advanced&quot;, &quot;Split Button&quot;, Arrays.asList(&quot;This is a link&quot;, &quot;This is another&quot;, &quot;Yet another&quot;), options) {
+
+	private static final long serialVersionUID = 1L;
+
+	@Override
+	public AbstractLink createButton(String id) {
+		return new Link&lt;Void&gt;(id) {
+
+			private static final long serialVersionUID = 1L;
+
+			@Override
+			public void onClick() {
+			}
+		};
+	}
+
+	@Override
+	public AbstractLink createDropdownLink(String id, int idx) {
+		return new Link&lt;Void&gt;(id) {
+
+			private static final long serialVersionUID = 1L;
+
+			@Override
+			public void onClick() {
+			}
+		};
+	}
+});
 </div></code>
 </pre>
 
 				</div>
 				<div>
 					<h4>HTML Rendered</h4>
-					<a href="#" class="small alert round button split">Split Button
-						<span data-dropdown="drop223"></span>
-					</a><br>
-					<ul id="drop223" class="f-dropdown" data-dropdown-content>
-						<li><a href="#">This is a link</a></li>
-						<li><a href="#">This is another</a></li>
-						<li><a href="#">Yet another</a></li>
-					</ul>
+					<div wicket:id="advanced"></div>
 				</div>
 			</div>
 		</div>
