--- a/wicket-foundation-samples/src/main/java/com/iluwatar/CatalogPage.html
+++ b/wicket-foundation-samples/src/main/java/com/iluwatar/CatalogPage.html
@@ -107,7 +107,7 @@
         <div class="small-4 columns">
           <wicket:link>
             <h3>Callouts & Prompts</h3>
-            <div class="row">1. Reveal Modal</div>
+            <div class="row">1. <a href="RevealModalPage.html">Reveal Modal</a></div>
             <div class="row">2. <a href="AlertsPage.html">Alerts</a></div>
             <div class="row">3. <a href="PanelsPage.html">Panels</a></div>
             <div class="row">4. <a href="TooltipsPage.html">Tooltips</a></div>
