--- a/wicket-foundation-samples/src/main/java/com/iluwatar/RevealModalPage.html
+++ b/wicket-foundation-samples/src/main/java/com/iluwatar/RevealModalPage.html
@@ -21,25 +21,19 @@
 			<div>
 				<div>
 					<h4>HTML</h4>
-<pre><code class="language-html"><div class="code-container">
+<pre><code class="language-html"><div class="code-container"><span class="tag">&lt;<span class="title">div</span> <span class="attribute">wicket:id</span>=<span class="value">&quot;basic&quot;</span>&gt;</span><span class="tag">&lt;/<span class="title">div</span>&gt;</span>
 </div></code></pre>
 				</div>
 				<div>
 					<h4>Java</h4>
-<pre><code class="language-html"><div class="code-container">
+<pre><code class="language-html"><div class="code-container">final String content = &quot;&lt;h2&gt;Awesome. I have it.&lt;/h2&gt;&lt;p class=\&quot;lead\&quot;&gt;Your couch. It is mine.&lt;/p&gt;&lt;p&gt;I&#39;m a cool paragraph that lives inside of an even cooler modal. Wins!&lt;/p&gt;&lt;a class=\&quot;close-reveal-modal\&quot;&gt;&#215;&lt;/a&gt;&quot;;
+add(new FoundationRevealModal(&quot;basic&quot;, Model.of(&quot;Click Me For A Modal&quot;), Model.of(content)));
 </div></code></pre>
 				</div>
 				<div>
 					<h4>Rendered HTML</h4>
-					<a href="#" data-reveal-id="myModal">Click Me For A Modal</a>
-
-					<div id="myModal" class="reveal-modal" data-reveal>
-						<h2>Awesome. I have it.</h2>
-						<p class="lead">Your couch. It is mine.</p>
-						<p>I&#39;m a cool paragraph that lives inside of an even
-							cooler modal. Wins!</p>
-						<a class="close-reveal-modal">&#215;</a>
-					</div>
+	
+					<div wicket:id="basic"></div>				
 				</div>
 			</div>
 
