--- a/wicket-foundation-samples/src/main/java/com/iluwatar/RevealModalPage.html
+++ b/wicket-foundation-samples/src/main/java/com/iluwatar/RevealModalPage.html
@@ -55,11 +55,14 @@ add(new FoundationRevealModal(&quot;basic&quot;, Model.of(&quot;Click Me For A M
 				</div>
 				<div>
 					<h4>Rendered HTML</h4>
+
+					<div wicket:id="video"></div>				
+					
+<!--  					
 					<a href="#" data-reveal-id="firstModal" class="radius button">Modal
 						in a modal&hellip;</a> <a href="#" data-reveal-id="videoModal"
 						class="radius button">Example Modal with Video&hellip;</a>
 
-					<!-- Reveal Modals begin -->
 					<div id="firstModal" class="reveal-modal" data-reveal>
 						<h2>This is a modal.</h2>
 						<p>
@@ -97,7 +100,8 @@ add(new FoundationRevealModal(&quot;basic&quot;, Model.of(&quot;Click Me For A M
 						<p>
 							<a class="close-reveal-modal">&#215;</a>
 					</div>
-					<!-- Reveal Modals end -->
+-->					
+
 				</div>
 			</div>
 		</div>
