Added skeleton for pricing table sample page.

--- a/wicket-foundation-samples/src/main/java/com/iluwatar/CatalogPage.html
+++ b/wicket-foundation-samples/src/main/java/com/iluwatar/CatalogPage.html
@@ -118,7 +118,7 @@
           <wicket:link>
             <h3>Content</h3>
             <div class="row">1. <a href="DropdownsPage.html">Dropdowns</a></div>
-            <div class="row">2. Pricing Tables</div>
+            <div class="row">2. <a href="PricingTablePage.html">Pricing Tables</a></div>
             <div class="row">3. <a href="ProgressBarPage.html">Progress Bars</a></div>
             <div class="row">4. Tables</div>
             <div class="row">5. Accordion</div>
