Skeleton for thumbnails sample page.

--- a/wicket-foundation-samples/src/main/java/com/iluwatar/CatalogPage.html
+++ b/wicket-foundation-samples/src/main/java/com/iluwatar/CatalogPage.html
@@ -67,7 +67,7 @@
           <wicket:link>
             <h3>Media</h3>
             <div class="row">1. <a href="OrbitSliderPage.html">Orbit Slider</a></div>
-            <div class="row">2. Thumbnails</div>
+            <div class="row">2. <a href="ThumbnailsPage.html">Thumbnails</a></div>
             <div class="row">3. Clearing Lightbox</div>
             <div class="row">4. Flex Video</div>
           </wicket:link>
